--- a/view/index.slim
+++ b/view/index.slim
@@ -1,4 +1,11 @@
 h1 BeatMe
 h2 first and only table
-p == @table
-p == @table.cards
+p == table
+.table
+    - table.places.each_with_index do |place, i|
+        div = "place ##{i}: #{place.empty? ? 'empty' : 'busy'}" \
+            "#{place === my_place ? ' it\'s me' : ''}"
+- unless my_place
+    a href="#{http.route :signin}" sign in
+- else
+    a href="#{http.route :signout}" sign out
