--- a/view/main.slim
+++ b/view/main.slim
@@ -2,6 +2,11 @@ doctype html
 html
   head
     title BeatMe
+    link rel='stylesheet' href='assets/css/bootstrap.min.css'
+    link rel='stylesheet' href='assets/css/style.css'
+    script src='assets/js/jquery-1.7.2.min.js'
+    script src='assets/js/bootstrap.min.js'
 
   body
-    == yield
+    #container
+      == yield
