--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39,6 +39,9 @@ header {
 .place.me {
   background: #d9edf7;
 }
+.place.active {
+  background: red;
+  }
 .place.dealer .title:before {
   content: "D";
   position: absolute;
