--- a/view/index.slim
+++ b/view/index.slim
@@ -1,6 +1,6 @@
 header BeatMe
 #bank = table.game
-#cards = table.cards
+#cards == color_cards(table.cards)
 #places
   - table.places.each_with_index do |place, i|
     - classes = ['place']
@@ -16,12 +16,16 @@ header BeatMe
         /.action rel='tooltip' title='last action' = place.action
         - if table.game == :on
           .amoun rel='tooltip' title='amount' = place.amount
-          .cards = place.cards if place == my_place
+          .cards == color_cards(place.cards) if place == my_place
         - if place === my_place 
           a href="#{ http.route :signout }" sign out
       - else 
         - unless my_place
-          a href="#{ http.route :signin, :place => 1 }" sign in
+          a href="#{ http.route :signin, :place => (i + 1).to_s }" sign in
+- if table.game == :on && table.places[table.turn] == my_place
+  #actions
+    - table.actions.each_key do |key|
+      .btn = key
 
 javascript:
   $('[rel=tooltip]').tooltip()
